# polar-vortex

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main-behave.yml  main-pytest.yml
database/: polar_interface.py  shelve_interfaces.py  vortex_interface.py
databases/polars_databases/behave/: test.parquet
databases/polars_databases/chat/: conversations.parquet
databases/polars_databases/default/: default.parquet
databases/polars_databases/reverse_index/: response_index.parquet  summary_index.parquet
databases/polars_databases/reverse_indexes/: prompt_indexes.parquet
databases/shelve_databases/: configs.bak  test.bak  validate.bak
features/: polars.feature
features/steps/: polars_steps.py
models/: models.py  polar_model.py
models/databases/: Person.bak  models.dir  util.dir
planning/: pv-design
polar_vortex/: polar-vortex.py  pv_tool.py
polar_vortex/interfaces/: .gitignore  log_interface.py  polar_interface.py  vortex_interface.py
polar_vortex/models/: polar_model.py
polar_vortex/protocols/: database_protocols.py
protocols/: database_protocols.py
test/: polar_interface_test.py  pv_tool_test.py  vortex_interface_test.py
