[tool.poetry]
name = "polar-vortex"
version = "0.1.2"
description = "Polar Vortex is column store database that uses Polars dataframes and either CSV or Parquet as the underlying storag"
authors = ["daniel-davee <daniel.v.davee@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "polar_vortex"}]

[tool.poetry.dependencies]
python = "^3.8"
plac = "^1.3.5"
pysimplelog = "^4.0.0"
polars = "^0.16.8"
candy-wrapper = "^1.0.1"
magic-run-cmd = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
black = "^23.1.0"
behave = "^1.2.6"
jupyter = "^1.0.0"
sphinx = "^6.1.3"
chat-companion = "^0.1.6"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.2.2"
mypy = "^1.1.1"

[tool.poetry.scripts]
polar-vortex = 'polar_vortex.polar-vortex:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
